--- a/package.json
+++ b/package.json
@@ -26,5 +26,6 @@
   "devDependencies": {
     "@rsbuild/core": "^0.7.0",
     "npm-run-all": "^4.1.5"
-  }
+  },
+  "packageManager": "pnpm@8.15.4+sha512.0bd3a9be9eb0e9a692676deec00a303ba218ba279d99241475616b398dbaeedd11146f92c2843458f557b1d127e09d4c171e105bdcd6b61002b39685a8016b9e"
 }
